--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "brightness": "^3.0.0",
     "express": "^4.21.2",
+    "loudness": "^0.4.2",
     "mongodb": "^6.13.1",
     "robotjs": "^0.6.0",
     "socket.io": "^4.8.1"
